added contentful and dynamic vids

--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "gatsby-transformer-sharp": "^5.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal-video": "^2.0.1",
     "sass": "^1.72.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.28",
-    "@types/react": "^18.2.66",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.22",
-    "typescript": "^5.4.2"
+    "@types/react-modal-video": "^1.2.3",
+    "typescript": "^5.4.3"
   }
 }
