--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal-video": "^2.0.1",
-    "sass": "^1.72.0"
+    "sass": "^1.72.0",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
